c/examples/gcc/testsuite/c-c++-common/gomp/pr79428-2.c
/* PR c/79428 */
/* { dg-options "-fopenmp" } */
void
foo ()
{
#pragma omp sections
#pragma omp section /* { dg-error "'#pragma omp section' may only be used in '#pragma omp sections' construct|not allowed" } */
// { dg-error "expected" "end" { target *-*-* } .-1 }
